# StitchCode

./: .gitignore  LICENSE  Makefile  README.md  index.html  pyproject.toml  stitch-code.html
assets/css/: blocks.css  console.css  editor-diagnostics.css  editor-syntax.css  editor.css  exercise-context.css  gemini-api-key.css  hilo-agent.css  hilo-focus.css  hilo-tutorial.css  layout.css  linter.css  loading-screen.css  plan-context.css  tokens.css  (+4 more)
docs/: presentacion.html
refs/: stitch-code.html
scripts/: build_hilo_frames.py
tests/: test_editor_editing.mjs  test_gemini_agent.py  test_gemini_api_key.mjs  test_hilo_draft.mjs  test_hilo_exercise_correction.mjs  test_hilo_highlight_line.mjs  test_hilo_intent.mjs  test_hilo_plan.mjs  test_hilo_response.mjs  test_hilo_tutorial.mjs  test_interpreter.py  test_learning_achievements.mjs  test_lexer.py  test_linter.py  test_parser.py  test_pedagogical_errors.py  test_pedagogical_fase_d.py  test_pedagogical_lint.py  test_pedagogical_runtime.py  test_side_panel.mjs  test_step_trace.mjs  test_structure_graph.mjs  test_tracer.py  test_translator.py  test_verbose.py  test_woven_highlighter.mjs
woven/: Woven.g4  Woven.interp  Woven.tokens  WovenLexer.interp  WovenLexer.py  WovenLexer.tokens  WovenListener.py  WovenParser.py  WovenVisitor.py  example.wv  gemini_agent.py  interpreter_visitor.py  linter_visitor.py  pedagogical_common.py  pedagogical_error_listener.py  pedagogical_lint.py  pedagogical_runtime.py  trace_serializer.py  tracing_visitor.py  translator_visitor.py  verbose_inverse.py  verbose_visitor.py  woven_runtime.py
(+46 files in other folders)
