[project]
name = "stitch-code"
version = "0.1.0"
description = "Entorno educativo Stitch Code con el lenguaje Woven"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.13.2",
]

[dependency-groups]
dev = [
    "antlr4-tools==0.2.1",
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["woven"]
testpaths = ["tests"]
